--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "ride/app-geocode",
     "description": "Geocode integration for the Ride application",
     "license": "MIT",
-    "version": "0.1.0",
     "authors": [
         {
             "name": "Joris Vandeweerd",
@@ -10,7 +9,7 @@
         }
     ],
     "require": {
-        "ride/app": ">=0.4.0",
-        "ride/lib-geocode": ">=0.1.0"
+        "ride/app": "^1.0.0",
+        "ride/lib-geocode": "^1.0.0"
     }
 }
